--- a/MyTransport/MyTransport.csproj
+++ b/MyTransport/MyTransport.csproj
@@ -46,14 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aircraft.cs" />
     <Compile Include="AttackAircraft.cs" />
     <Compile Include="Direction.cs" />
+    <Compile Include="FlyingObject.cs" />
     <Compile Include="FormAttackAircraft.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormAttackAircraft.Designer.cs">
       <DependentUpon>FormAttackAircraft.cs</DependentUpon>
     </Compile>
+    <Compile Include="ITransport.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAttackAircraft.resx">
