--- a/MyTransport/MyTransport.csproj
+++ b/MyTransport/MyTransport.csproj
@@ -56,11 +56,21 @@
     <Compile Include="FormAttackAircraft.Designer.cs">
       <DependentUpon>FormAttackAircraft.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormParking.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormParking.Designer.cs">
+      <DependentUpon>FormParking.cs</DependentUpon>
+    </Compile>
     <Compile Include="ITransport.cs" />
+    <Compile Include="Parking.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAttackAircraft.resx">
       <DependentUpon>FormAttackAircraft.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormParking.resx">
+      <DependentUpon>FormParking.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
